--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -24,7 +24,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.4.0-34.1.pre'
-          channel: 'stable'
+          channel: 'beta'
           cache: true
       - run: flutter --version
       - run: flutter pub get
